<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FAE6E6"
    tools:context=".RestaurantMenuActivity">

    <ImageButton
        android:id="@+id/btn_drinks"
        android:layout_width="146dp"
        android:layout_height="129dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="67dp"
        android:background="@drawable/drink"
        android:contentDescription="@string/todo"
        android:elevation="21dp" />

    <ImageButton
        android:id="@+id/btn_snack"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="138dp"
        android:layout_height="134dp"
        android:layout_alignTop="@+id/btn_drinks"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:adjustViewBounds="true"
        android:background="@drawable/appetizer"
        android:cropToPadding="true"
        android:elevation="20dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_snack"
        android:layout_toStartOf="@+id/btn_local_food"
        android:layout_toLeftOf="@+id/btn_local_food"
        android:text="@string/drinks"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_snack"
        android:layout_toEndOf="@+id/btn_local_food"
        android:layout_toRightOf="@+id/btn_local_food"
        android:text="@string/appetizers"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_drinks"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/food"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <ImageButton
        android:id="@+id/btn_local_food"
        android:layout_width="181dp"
        android:layout_height="148dp"
        android:layout_below="@+id/textView8"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:background="@drawable/food"
        android:elevation="24dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/textViewWine"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_local_food"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/wine"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <ImageButton
        android:id="@+id/btn_wine"
        android:layout_width="153dp"
        android:layout_height="155dp"
        android:layout_below="@+id/btn_local_food"
        android:layout_marginTop="62dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/wine__1_" />

    <TextView
        android:id="@+id/textViewDessert"
        android:layout_width="95dp"
        android:layout_height="44dp"
        android:layout_below="@+id/btn_local_food"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="26dp"
        android:text="@string/dessert"
        android:textColor="@color/cardview_dark_background"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <ImageButton
        android:id="@+id/imageButtonDessert"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:layout_below="@+id/btn_local_food"
        android:layout_marginLeft="270dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/dessert" />


</RelativeLayout>