<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:flatui="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:contentDescription="@string/app_name"
        android:scaleType="centerInside" />

    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        >

        <RelativeLayout
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#D83737"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:shadowColor="#E87171"
                android:text="@string/order"
                android:textColorHint="#FFFFFF"
                flatui:fl_blockButtonEffectHeight="3dp"
                flatui:fl_touchEffect="fl_ripple" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button

                android:id="@+id/btnStaff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:backgroundTint="#D83737"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:shadowColor="#E87171"
                android:text="@string/staff"
                flatui:fl_blockButtonEffectHeight="3dp"
                flatui:fl_touchEffect="fl_ripple" />



        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="256dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="150dp"

        android:layout_marginEnd="0dp"
        android:layout_marginBottom="200dp"
        android:text="Restaurant Organizer"
        android:textColor="#D83737"
        android:textSize="48sp" />

    <!--

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/copyright"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        />

        -->

</RelativeLayout>