<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#ECE8E8">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_item_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ECE8E8"
        android:backgroundTint="#ECE8E8"
        tools:context=".Activity.AddMenuItemActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/menu_toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="#fff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/add_item_image"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/food"
            app:layout_constraintBottom_toTopOf="@+id/add_item_food_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/menu_toolbar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_item_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/food_name"
            app:counterEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/add_item_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_item_food_name_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/price_logo"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="$"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_item_food_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_item_food_price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/food_price"
            app:counterEnabled="true"
            app:layout_constraintStart_toEndOf="@id/price_logo"
            app:layout_constraintTop_toBottomOf="@id/add_item_food_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_item_food_price_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/c_t_tv"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="Cuisine Type: "
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_item_food_price" />

        <RadioGroup
            android:id="@+id/cuisine_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/c_t_tv">

            <RadioButton
                android:id="@+id/drinks_cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Drinks" />

            <RadioButton
                android:id="@+id/wine_cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Wine" />

            <RadioButton
                android:id="@+id/food_cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Food" />

            <RadioButton
                android:id="@+id/appetizers_cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Appetizers" />

            <RadioButton
                android:id="@+id/desserts_cuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desserts" />


        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_item_food_desc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/food_description"
            app:counterEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cuisine_group">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_item_food_desc_et"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="3" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_item_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="#ffffff"
            android:backgroundTintMode="multiply"
            android:padding="12dp"
            android:text="Add Food To Database"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/btnStaffDark"
            app:cornerRadius="4dp"
            app:layout_constraintTop_toBottomOf="@id/add_item_food_desc_layout"
            app:rippleColor="@android:color/white"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>